--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "strona",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,25 +7,24 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Filip",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.19.6",
-    "@babel/preset-env": "^7.19.4",
-    "browser-sync": "^2.27.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-imagemin": "^7.1.0",
     "gulp-kit": "^0.3.0",
+    "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-sass": "^5.1.0",
-    "postcss": "^8.4.18",
-    "sass": "^1.55.0",
-    "gulp-rename": "^2.0.0"
+    "sass": "^1.49.7"
   },
   "dependencies": {}
 }
